<resources>
    <string name="app_name">MyProject</string>
    <string name="talkin">TALKIN</string>
    <string name="beta">Beta</string>
    <string name="justtalk">Just Talk</string>
    <string name="button">Connexion</string>
    <string name="button1">Phone</string>
    <string name="button2">Connexion</string>
    <string name="accountname">Account Creation</string>
    <string name="insert">Insert your email address</string>
    <string name="name">What is Your Name</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="yore">Yore </string>
    <string name="yore1">Corporation </string>
    <string name="emailaddress">insert your email address </string>
    <string name="email">Email</string>
    <string name="talkid">Talk ID</string>
    <string name="talk">Create your Talk ID</string>
    <string name="mango">mango</string>
    <string name="who">who are you?</string>
    <string name="Iam">I am</string>
    <string name="man">a man</string>
    <string name="woman">a woman</string>
    <string name="make">Make your password</string>
    <string name="password">Password</string>
    <string name="confirmatinpassword">Confirmation Your Password</string>
    <string name="pic">a Picture?</string>
    <string name="welcome">Welcome to the Yore platform</string>
    <string name="thi">This new community</string>
    <string name="connect">connect users</string>
    <string name="via">via Talks(interactive chat)</string>
    <string name="you">You will be able :</string>
    <string name="meet">- Meet new people</string>
    <string name="communicate">- Communicate with your loved ones</string>
    <string name="browser">- Browse a stream of varied content</string>
    <string name="intelligent">- Intelligent connection</string>
    <string name="person">- Personalized services</string>
    <string name="takpassword">Make your password</string>
    <string name="youare">You are part of the new community.</string>
    <string name="pressing"><u>Pressing connection you accept the conditions general use</u></string>
    <string name="createtakid">Create your talk ID</string>
    <string name="rentrer">Rentrer votre mot de passe</string>
    <string name="modepasse">Mot de passe</string>
    <string name="create">Create Accaunt</string>
    <string name="idemail">Talk ID,E-mail</string>
    <string name="rentrerid">Rentrer votre Identifiant</string>

</resources>
